--- a/src/components/characterCard.css
+++ b/src/components/characterCard.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 50px;
 }
 
 .character-card {
   width: 600px;
   height: 220px;
   background-color: transparent;
-  perspective: 1000px;
+  perspective: 1500px;
   position: relative;
 }
 
@@ -16,6 +17,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
@@ -30,6 +32,10 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  background-color: #202329;
+  color: rgb(245, 245, 245);
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 .character-card-front {
@@ -41,7 +47,18 @@
   transform: rotateY(180deg);
 }
 
+.character-card-image-container {
+  height: 100%;
+  overflow: hidden;
+  flex: 2 1 0;
+}
+
 .character-info {
+  flex: 3 1 0;
+  margin: 10px;
+
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  gap: 1px;
 }
