--- a/src/components/characterCard/characterCard.css
+++ b/src/components/characterCard/characterCard.css
@@ -32,7 +32,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  background-color: #202329;
+  background-color: #3c3e44;
   color: rgb(245, 245, 245);
   border-radius: 15px;
   overflow: hidden;
