--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #main-section {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 
   background: rgb(39, 43, 51);
 }
