--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+#root {
+  height: 100%;
+  font-size: 20px;
+  font-family: "Skranji", cursive;
+}
+
 #main-section {
   min-height: 100%;
   display: flex;
@@ -10,4 +16,21 @@
 #character-list {
   display: flex;
   justify-content: center;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.7rem;
+}
+
+h3 {
+  font-family: "Skranji", cursive;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
